# Haiku-evals

./: .env.example  .gitignore  README.md  RESULTS.md  pyproject.toml
data/: scenarios.yaml
prompts/: natural_v1.txt  strict_v1.txt
results/demo/: by_prompt_variant.csv  by_scenario.csv  by_stratum.csv  manifest.json  predictions.jsonl  summary.json
scripts/: generate_demo_predictions.py
src/: embeddings.py  inspect_eval.py  inspect_metrics.py  report.py  reporting.py  run_eval.py  schema.py  score.py  syllables_util.py  validate_scenarios.py
src/providers/: anthropic_provider.py  openai_provider.py
