[project]
name = "haiku-evals"
version = "0.2.0"
description = "LLM eval benchmark for haiku form and subject grounding via syllables and neutral embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "syllables>=1.0.7",
    "sentence-transformers>=3.0.0",
    "inspect-ai>=0.3.0",
]

[project.scripts]
validate-scenarios = "src.validate_scenarios:main"
report-eval = "src.report:main"
run-eval = "src.run_eval:main"
score-eval = "src.score:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
